--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Compiled class file
+*.idea
+.idea
 *.class
 
 # Log file
@@ -21,3 +23,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.gradle
+/build
+
+# IDEA
+# ----
+*/.idea
+.idea/
+.shelf
+/*.iml
+/*.ipr
+/*.iws
+/out
+
+/out/*.*
+.idea/eureka_serice.iml
+.idea/misc.xml
+.DS_Store
+target/
